Instrucciones para la instalación del proyecto

--- a/Informe de Diseño TP Final.ipynb
+++ b/Informe de Diseño TP Final.ipynb
@@ -7,6 +7,38 @@
    "source": [
     "ITBA - TP Final Python"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea37f90-54e0-4b49-8212-45e6c9003144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Instalación del proyecto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2dee2cf-0674-4865-b661-f13c72ce4414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "´´´\n",
+    "conda create -n tp-final-2024\n",
+    "conda activate tp-final-2024\n",
+    "conda install Python==3.10.13\n",
+    "´´´"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b5a59a9-72ec-4fbc-bb94-17b542f612ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
